--- a/hellow.html
+++ b/hellow.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <!-- learn version control system -->
+    <h1>Welcome to code with zairii platform where you'll learn all about coding</h1>
 </body>
 </html>
