--- a/hellow.html
+++ b/hellow.html
@@ -9,5 +9,6 @@
 <body>
     <!-- learn version control system -->
     <h1>Welcome to code with zairii platform where you'll learn all about coding</h1>
+    <p>welcome to code with zairii p added to repository</p>
 </body>
 </html>
